# pytransflow

./: .gitignore  .pylintrc  CHANGELOG.md  LICENSE.md  README.md  pyproject.toml
.github/workflows/: linters-tests.yml  prerelease.yml  publish.yml  tag-release.yml
docs/source/: api.rst  conf.py  index.rst
pytransflow/: __init__.py
pytransflow/core/: __init__.py  analyzer.py  condition.py  configuration.py  constants.py  controller.py  eval.py  resolver.py  schema.py
pytransflow/core/flow/: __init__.py  configuration.py  dataset.py  fail_scenario.py  flow.py  loader.py  parallel.py  pipeline.py  schema.py  statistics.py  variables.py
pytransflow/core/record/: __init__.py  failed.py  record.py
pytransflow/core/transformation/: __init__.py  catalogue.py  configuration.py  exception_handler.py  schema.py  transformation.py
pytransflow/exceptions/: __init__.py  analyzer.py  base.py  configuration.py  controller.py  flow.py  records.py  transformation.py
pytransflow/transformations/: add_field.py  flatten.py  generate_uuid.py  postfix.py  prefix.py  regex_extract.py  remove_fields.py  rename.py  validate.py
scripts/: build.py
tests/: conftest.py
tests/core/: test_analyzer.py  test_catalogue.py  test_configuration.py  test_controller.py  test_dataset.py  test_eval.py  test_flow.py  test_records.py  test_transformation.py
tests/transformations/: test_add_field.py  test_flatten.py  test_generate_uuid.py  test_postfix.py  test_prefix.py  test_regex_extract.py  test_remove_fields.py  test_rename.py  test_validate.py
